<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpActivity">

    <TextView
        android:id="@+id/help_tv_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/help_tv_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tv_3" />

    <TextView
        android:id="@+id/help_tv_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="64dp"
        android:text="@string/help_tv_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/help_tv_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/help_tv_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tv_1" />

    <TextView
        android:id="@+id/help_tv_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/help_tv_3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tv_2" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/help_btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/cd_btn_add_account"
        app:layout_constraintStart_toEndOf="@+id/help_tv_1"
        app:layout_constraintTop_toTopOf="parent"
        app:maxImageSize="48dp"
        app:srcCompat="@android:drawable/ic_input_add" />

    <ImageButton
        android:id="@+id/help_btn_3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/semi_round_grey_bg"
        android:contentDescription="@string/cd_img_btn_show"
        app:layout_constraintStart_toEndOf="@+id/help_tv_3"
        app:layout_constraintTop_toBottomOf="@+id/help_tv_2"
        app:srcCompat="@drawable/ic_btn_eye" />

    <ImageButton
        android:id="@+id/help_btn_4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/semi_round_grey_bg"
        android:contentDescription="@string/cd_img_btn_copy"
        app:layout_constraintStart_toEndOf="@+id/help_tv_4"
        app:layout_constraintTop_toBottomOf="@+id/help_btn_3"
        app:srcCompat="@drawable/ic_btn_copy" />

    <TextView
        android:id="@+id/help_tv_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/help_tv_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tv_4" />

    <TextView
        android:id="@+id/help_tv_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/help_tv_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tv_5" />

    <TextView
        android:id="@+id/help_tv_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        android:text="@string/help_tv_7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/help_tv_6" />

    <ImageButton
        android:id="@+id/help_btn_5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="17dp"
        android:background="@drawable/round_bg"
        android:contentDescription="@string/btn_manager_text"
        app:layout_constraintStart_toEndOf="@+id/help_tv_5"
        app:layout_constraintTop_toBottomOf="@+id/help_btn_4"
        app:srcCompat="@drawable/ic_btn_help" />

    <ImageButton
        android:id="@+id/help_btn_6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_bg"
        android:contentDescription="@string/cd_img_btn_delete_db"
        android:src="@drawable/ic_btn_db_delete"
        app:layout_constraintStart_toEndOf="@+id/help_tv_6"
        app:layout_constraintTop_toBottomOf="@+id/help_btn_5" />

    <ImageButton
        android:id="@+id/help_btn_7"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_bg"
        android:contentDescription="@string/cd_img_btn_export_db"
        app:layout_constraintStart_toEndOf="@+id/help_tv_7"
        app:layout_constraintTop_toBottomOf="@+id/help_btn_6"
        app:srcCompat="@drawable/ic_export_db" />
</androidx.constraintlayout.widget.ConstraintLayout>